# Ruggine-RustWebServer

./: README.md
client-ruggine/: index.html  package-lock.json  package.json
client-ruggine/src/: API.js  App.jsx  global-noscroll.css  main.jsx
client-ruggine/src/Components/: ChatHeader.jsx  ChatSidebar.jsx  GroupInfoModal.jsx  InviteForm.jsx  InviteModal.jsx  InviteUsersModal.jsx  LeaveGroupModal.jsx  MessageInput.jsx  MessageList.jsx  RequestItem.jsx
client-ruggine/src/Views/: AuthPage.jsx  ChatsPage.jsx  DefaultLayout.jsx  RequestsPage.jsx
server-ruggine/: .gitignore  Cargo.toml  Ruggine.db
server-ruggine/src/: AxumAPI.postman_collection.json  main.rs  routes.rs
server-ruggine/src/db_mapper/: chat.rs  message.rs  mod.rs  request.rs  user.rs
server-ruggine/src/route_handlers/: chat_handler.rs  message_handler.rs  mod.rs  request_handler.rs  user_handler.rs  ws_handler.rs
server-ruggine/src/utilities/: error.rs  mod.rs  monitor.rs  utils.rs
