[package]
name = "server-ruggine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
bcrypt = "0.13"  # o l'ultima versione disponibile
thiserror = "1.0"
serde_json = "1.0.142"
tower-http = { version = "0.5", features = ["cors"] }
async-session = "3"
headers = "0.4"
once_cell = "1.21.3"
chrono = "0.4.41"
futures-util = "0.3.31"
sysinfo = "0.29"